--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,9 @@ dependencies = [
 ]
 requires-python = ">=3.0"
 
+[tool.setuptools]
+packages = ["onpolicy", "toy_experiments"]
+
 [project.urls]
 Homepage = "https://github.com/giangbang/Strong-Pareto-MARL"
 
