Update dependencies in pyproject.toml
add cvxopt

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "autograd",
     "matplotlib",
     "cvxpy",
+    "cvxopt",
     "matplotlib-label-lines",
     "tensorboardX",
     "setproctitle"
